# TTIO-MCP-Server

./: .gitattributes  .gitignore  CHANGELOG.md  DEPLOYMENT-GUIDE.md  HANDOFF-M2.md  HANDOFF-M3.md  HANDOFF-M4.md  HANDOFF-M5.md  HANDOFF-M6.md  HANDOFF-M7.md  HANDOFF-M8.md  HANDOFF.md  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
docs/: configuration.md  tools.md
docs/superpowers/plans/: 2026-06-10-workbench-mcp.md
docs/superpowers/specs/: 2026-06-10-workbench-mcp-design.md
migrations/: env.py
migrations/versions/: 3840d96e5185_signature_columns.py  65fda2fc1cfe_encrypted_algorithm.py  c7aabd1334cf_quantifications.py  d556e849b813_initial_schema.py
scripts/: try_uploader.py
src/mpeg_o_mcp/: catalog.py  config.py  hashes.py  keyring.py  server.py
src/mpeg_o_mcp/db/: __init__.py  models.py  session.py
src/mpeg_o_mcp/tools/: __init__.py  _fsspec_defaults.py  _helpers.py  decrypt_file.py  encrypt_file.py  get_file.py  get_quantifications.py  get_run.py  get_spectrum.py  launch_uploader.py  list_files.py  push_file.py  register.py  reverify.py  search_identifications.py  sign_file.py  verify_signature.py
src/mpeg_o_mcp/uploader/: __init__.py  __main__.py  core.py  gui.py
src/ttio_mcp/: __init__.py  catalog.py  config.py  connection.py  errors.py  export.py  hashes.py  keyring.py  server.py  summarize.py
src/ttio_mcp/db/: __init__.py  models.py
src/ttio_mcp/tools/: __init__.py  _fsspec_defaults.py  _helpers.py  _serialize.py  auth.py  cohorts.py  containers.py  data.py  decrypt_file.py  encrypt_file.py  get_file.py  get_quantifications.py  get_run.py  get_spectrum.py  jobs.py  launch_uploader.py  list_files.py  push_file.py  register.py  reverify.py  search_identifications.py  sessions.py  sign_file.py  transfers.py  verify_signature.py
src/ttio_mcp/uploader/: __init__.py  __main__.py  core.py  gui.py
tests/: _cloud.py  _fixtures.py  conftest.py  test_catalog.py  test_cloud.py  test_config.py  test_connection.py  test_errors.py  test_export.py  test_initialize.py  test_launch_uploader_tool.py  test_m3_tools.py  test_m5_as_user.py  test_m5_encrypt_decrypt.py  test_m5_keyring.py  test_m6_push_file.py  test_m7_sign_verify.py  test_m8_conformance.py  test_schema.py  test_server.py  test_stdout_protection.py  test_summarize.py  test_tools.py  test_tools_auth.py  test_tools_cohorts.py  test_tools_containers.py  test_tools_data.py  test_tools_jobs.py  test_tools_sessions.py  test_tools_transfers.py  test_uploader_core.py
tests/integration/: _live_mcp.py  test_live_full.py  test_live_smoke.py
