[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "ttio-mcp"
version = "0.9.0.dev0"
description = "MCP server exposing tti-workbench-server (non-admin) capabilities to LLM clients"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "DTW-Thalion" }]
keywords = ["mcp", "tti-o", "multi-omics", "llm", "catalog"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "mcp>=1.2",
    "ttio[network,crypto] @ git+https://github.com/DTW-Thalion/TTI-O.git@v1.7.1#subdirectory=python",
    "numpy>=1.24",
    "pyarrow>=16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]
pqc = [
    "ttio[pqc] @ git+https://github.com/DTW-Thalion/TTI-O.git@v1.7.1#subdirectory=python",
]
cloud = [
    "ttio[cloud] @ git+https://github.com/DTW-Thalion/TTI-O.git@v1.7.1#subdirectory=python",
]

[project.scripts]
ttio-mcp = "ttio_mcp.server:main"

[project.urls]
Homepage = "https://github.com/DTW-Thalion/TTIO-MCP-Server"
Repository = "https://github.com/DTW-Thalion/TTIO-MCP-Server"
"TTI-O Standard" = "https://github.com/DTW-Thalion/TTI-O"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ttio_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
